Replacing classloader with custom one. NoClassDefError exception to be resolved